# pyfuncpatmatch

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
pyfuncpatmatch/: PatDecoratorClass.py  __init__.py  __main__.py  pat_decorator_class.py  pat_match_types.py  pm.py  pm_ext.py  pm_utils.py  pyfuncpatmatch.py  types.py
tests/: advanced.py  test.py
