[project]
name = "pyfuncpatmatch"
description = "Pattern matching (like haskell) for python fonctions"
authors = [
    {name = "Xavier Mitault", email = "xavier.mitault@epitech.eu"},
]
dependencies = []
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
dynamic = ["version"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = [
    "pdm-pep517>=1.0",
    "setuptools>=45",
    "setuptools_scm[toml]>=6.2"
]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm.version]
source = "scm"
write_to = "pyfuncpatmatch/__version__.py"
write_template = '__version__ = "{}"'
[tool.pdm.build]
includes = [
    "pyfuncpatmatch/",
]
[tool.pdm.scripts]
test = "python -m pyfuncpatmatch"
black = "black pyfuncpatmatch"
vulture = "vulture pyfuncpatmatch"
flake8 = "flake8 pyfuncpatmatch"
[tool.black]
line-length = 79

[tool.pdm.dev-dependencies]
dev = [
    "black>=24.3.0",
    "vulture>=2.11",
    "flake8>=7.0.0",
]
